2005-03-25 10:43 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) added all ghost two face
	cells to plan. Activated ghost plan be default.
	Revert by setting `swap_the_fast_new_way' to FALSE.

2005-03-25 08:51 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMirrorNodeAboutY0) Fixed calculation of new node
	Y location when Y0 is non zero. This is to fix the BWB mirror
	case.

2005-03-24 16:24 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCopyAboutY0, gridMirrorNodeAboutY0) Generalized
	routine to work for cases that have global node and cell ID's as
	well as cases that do not have global ID's.

2005-03-24 16:17 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridRemoveCellAndQueue) To increase the speed of
	parallel adaptation runs a removed cell is only queued if it has a
	ghost node. gridRemoveFaceAndQueue and gridRemoveEdgeAndQueue
	already do this. Unfortunitly this did not drastically affect the
	performace of test cases.

2005-03-22 16:00 Mike Park  <mike.park@nasa.gov>

	* src/MesherX.c (main) fixed the -vgbg option
	* src/MesherX_HLA.c (main) fixed the -vgbg option

2005-03-22 15:55 Mike Park  <mike.park@nasa.gov>

	* src/mesher.c (MesherX_DiscretizeVolume) attempt at non unity
	spacing growth rates.

2005-03-22 13:05 Mike Park  <mike.park@nasa.gov>

	* src/layer.c (layerTerminateFutureNegativeCellNormals)
	1) Fixed a bug that terminated the wrong normal. This
	fixed the BWB case.
	2) Made the call repeat the negative cell tests until it
	gets through a complete sweep with no terminations. this
	to to catch a negative cell that is created by another
	termintaion.

2005-03-21 15:56 Beth Lee-Rausch  <e.m.lee-rausch@larc.nasa.gov>

	* src/gridfortran.c (gridcreate_) Removed the uv check from
	the default cost constraint. To allow the fake geometry cases
	to run with out accessing frozen surface faces.
	* src/gridfortran.c (gridparallelloadcapri_) Turned on uv checks